force-app/main/default/objects/SpecWSLink__c/SpecWSLink__c.object-meta.xml
<CustomObject>
    <label>Spec WS Link</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spec WS Link</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>