force-app/main/default/objects/SpecWSLink__c/fields/SpecWS__c.field-meta.xml
<CustomField>
    <fullName>SpecWS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spec WS</label>
    <referenceTo>SpecificationBase__c</referenceTo>
    <relationshipLabel>Spec WS Link</relationshipLabel>
    <relationshipName>Spec_WS_Link</relationshipName>
    <type>Lookup</type>
</CustomField>