force-app/main/default/objects/SpecWSLink__c/fields/SpecWSPart__c.field-meta.xml
<CustomField>
    <fullName>SpecWSPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spec WS Part</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipLabel>Spec WS Link</relationshipLabel>
    <relationshipName>Spec_WS_Link</relationshipName>
    <type>Lookup</type>
</CustomField>