force-app/main/default/objects/SpecWSLink__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SpecWS__c</columns>
    <columns>SpecWSPart__c</columns>
    <columns>WSPartType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>